actionview working on articles and on administrate for it

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -138,7 +138,7 @@
             <span class="font-bold text-gray-700 font-cursive text-xl tracking-tight"><%= Article.last.title %></span>
           </div>
           <div class="pt-3">
-            <span class="text-gray-600"><%= Article.last.content %></span>
+            <span class="text-gray-600"><%= Article.last.rich_body %></span>
           </div>
           <div class="pt-5 pb-1 space-x-2">
             <span class="text-gray-500 text-xs"><%= (Article.last.created_at).strftime("%b %d, %Y") %></span>
