--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+@import "trix/dist/trix";
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Overlock:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Overlock:wght@400;700&display=swap');
+
 
 @layer utilities {
   @responsive {
