--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
           <span class="font-bold text-2xl text-gray-700 font-cursive"><%= article.title %></span>
         </div>
         <div class="pt-4 lg:pb-14 ">
-          <span class="text-gray-600"><%= article.content %></span>
+          <span class="text-gray-600"><%= article.rich_body %></span>
         </div>
         <div class=" bottom-0 pt-6 pb-2 flex space-x-2 lg:absolute">
           <span class="text-gray-500 font-thin text-sm"><%= (article.created_at).strftime("%b %d, %Y") %></span>
@@ -44,7 +44,7 @@
             <span class="font-bold text-gray-700 font-cursive text-xl tracking-tight"><%= Article.last.title %></span>
           </div>
           <div class="pt-3">
-            <span class="text-gray-600"><%= Article.last.content %></span>
+            <span class="text-gray-600"><%= Article.last.rich_body %></span>
           </div>
           <div class="pt-5 pb-1 space-x-2">
             <span class="text-gray-500 text-xs"><%= (Article.last.created_at).strftime("%b %d, %Y") %></span>
