--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
-  <body>
+  <body data-controller="gdpr-popup">
 
     <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') && !current_page?(controller: 'registrations', action: 'edit')%>
       <%= render "shared/navbar" unless @disable_nav %>
     <% end %>
+    <div data-gdpr-popup-target="popup" class="hidden">
+      <p>By using this site you agree to our <a href="#">Terms and Conditions</a>.
+        Please <a id="accept" href="#">Accept</a> these before using the site.
+      </p>
+    </div>
     <%= yield %>
+
     <% if !current_page?(controller: 'devise/sessions', action: 'new') && !current_page?(controller: 'registrations', action: 'new') && !current_page?(controller: 'registrations', action: 'edit') %>
       <%= render "shared/footer" unless @disable_footer %>
     <% end %>
