refacto popup in a partial

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="lg:hidden">
-  <%= render "shared/navbar_light" %>
+  <%= render "shared/navbar/navbar_light" %>
 </div>
 
 <div class="hidden lg:block">
