change focus border to forms

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -27,19 +27,19 @@
                       autofocus: true,
                       label: false,
                       placeholder: 'Patrick',
-                      input_html: { class: "px-2 py-4 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg focus:outline-none"} %>
+                      input_html: { class: "px-2 py-4 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg focus:outline-none  focus:border-japonica-300"} %>
 
           <%= f.input :email,
                       required: false,
                       label: false,
                       placeholder: "patricycles@gmail.com",
-                      input_html: { class: "px-2 py-4 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg focus:outline-none"} %>
+                      input_html: { class: "px-2 py-4 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :message,
                       required: false,
                       label: false,
                       placeholder: "Ecrivez votre message ici...",
-                      input_html: { class: "px-2 pt-2 pb-32 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg focus:outline-none"} %>
+                      input_html: { class: "px-2 pt-2 pb-32 text-sm text-gray-600 border-2 border-gray-200 w-full rounded-lg  focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :accept,
                       as: :boolean,
