--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -2,7 +2,7 @@
 
   <div class="px-6 pt-8 ">
     <%= link_to root_path do %>
-    <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+    <button class="focus:outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
     <% end %>
   </div>
 
@@ -21,7 +21,7 @@
                     required: false,
                     label: false,
                     placeholder: "Toto L'Asticot",
-                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
 
         <%= f.input :street,
@@ -29,19 +29,19 @@
                     autofocus: true,
                     label: false,
                     placeholder: '18 rue saint marcelin',
-                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
         <%= f.input :street_detail,
                     required: false,
                     label: false,
                     placeholder: "Complément d'adresse",
-                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
         <%= f.input :zipcode,
                     required: false,
                     label: false,
                     placeholder: "75000",
-                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
         <%= f.input :city,
                     required: false,
