--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -36,13 +36,13 @@
                         required: false,
                         label: false,
                         placeholder: 'Prénom*',
-                        input_html: { class: " text-sm text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: " text-sm text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :last_name,
                         required: false,
                         label: false,
                         placeholder: 'Nom*',
-                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :email,
                         required: false,
@@ -50,7 +50,7 @@
                         input_html: { autocomplete: "email" },
                         label: false,
                         placeholder: 'Email*',
-                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
+                        input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg focus:outline-none focus:border-japonica-300"} %>
 
           <%= f.input :password,
                         required: false,
