--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,9 +12,8 @@
     <div>
 
 
-      <%= link_to items_path do %>
-        <button class="px-6 py-4 uppercase tracking-tight text-sm text-white font-semibold border-2 border-white rounded-xl hover:bg-white hover:text-japonica-500 focus:outline-none">Découvrir</button>
-      <% end %>
+      <%= link_to "Découvrir", items_path, class:'px-6 py-4 uppercase tracking-tight text-sm text-white font-semibold border-2 border-white rounded-xl hover:bg-white hover:text-japonica-500 focus:outline-none' %>
+
     </div>
   </div>
 </header>
