refacto/review models

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -56,7 +56,7 @@
 
 
 
-<% elsif @order.envoyé? %>
+<% elsif @order.send? %>
   <div class="px-4 pb-24 pt-10 text-center max-w-xs mx-auto lg:max-w-5xl">
     <div class="lg:flex lg:flex-row-reverse">
       <div class="lg:w-1/2 lg:ml-24" >
@@ -97,7 +97,7 @@
 
   </div>
 
-<% elsif @order.reçu? %>
+<% elsif @order.received? %>
   <div class="px-4 pb-24 pt-10 text-center max-w-xs mx-auto lg:max-w-5xl">
     <div class="lg:flex lg:flex-row-reverse">
       <div class="lg:w-1/2 lg:ml-24" >
