--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -12,17 +12,17 @@
         <svg class="w-6 h-6 text-japonica-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M6.672 1.911a1 1 0 10-1.932.518l.259.966a1 1 0 001.932-.518l-.26-.966zM2.429 4.74a1 1 0 10-.517 1.932l.966.259a1 1 0 00.517-1.932l-.966-.26zm8.814-.569a1 1 0 00-1.415-1.414l-.707.707a1 1 0 101.415 1.415l.707-.708zm-7.071 7.072l.707-.707A1 1 0 003.465 9.12l-.708.707a1 1 0 001.415 1.415zm3.2-5.171a1 1 0 00-1.3 1.3l4 10a1 1 0 001.823.075l1.38-2.759 3.018 3.02a1 1 0 001.414-1.415l-3.019-3.02 2.76-1.379a1 1 0 00-.076-1.822l-10-4z" clip-rule="evenodd"/></svg>
         <p class="text-gray-500 text-sm italic text-center">Clique sur ta commande pour voir toutes les informations !</p>
       </div>
-      <% if @orders.where(status: 'envoyé').count > 0 %>
+      <% if @orders.where(status: 'send').count > 0 %>
         <div class="text-center">
           <div class="pt-4 max-w-xs mx-auto">
-            <span class="text-gray-700 text-xl font-bold shadow-inner">  <%= @orders.where(status: 'envoyé').count %> Commandes en cours d'envoi </span>
+            <span class="text-gray-700 text-xl font-bold shadow-inner">  <%= @orders.where(status: 'send').count %> Commandes en cours d'envoi </span>
             <div class="pt-2">
               <span class="text-gray-500 text-sm italic">Vous avez une question ou vous avez fait une erreur lors de la commande ? <%= link_to "Contactez-moi", new_contact_path, class:'underline' %> </span>
             </div>
           </div>
 
           <div class="pt-2 ">
-            <% @orders.where(status: 'envoyé').each do |order| %>
+            <% @orders.where(status: 'send').each do |order| %>
                 <% unless order.status.nil? %>
                   <%= link_to order_path(order) do %>
                     <div class="px-4 py-4 mt-4 flex flex-col bg-white shadow-total rounded max-w-xs mx-auto lg:mx-0">
@@ -78,13 +78,13 @@
         </div>
 
 
-      <% if @orders.where(status: 'reçu').count > 0 %>
+      <% if @orders.where(status: 'received').count > 0 %>
 
         <div class="text-center">
           <div class="pt-6 max-w-xs mx-auto">
-            <span class="text-gray-700 text-xl font-bold shadow-inner"> <%= @orders.where(status: 'reçu').count %> Commandes termnées </span> </div>
+            <span class="text-gray-700 text-xl font-bold shadow-inner"> <%= @orders.where(status: 'received').count %> Commandes termnées </span> </div>
           <div>
-            <% @orders.where(status: 'reçu').each do |order| %>
+            <% @orders.where(status: 'received').each do |order| %>
               <% order.cart.cart_items.each do |cart_item| %>
                 <% unless order.status.nil? %>
                   <%= link_to order_path(order) do %>
