mailer method to alert owned of site when an order is made

--- a/app/views/user_mailer/deliver_confirmation.text.erb
+++ b/app/views/user_mailer/deliver_confirmation.text.erb
@@ -1,1 +1,7 @@
-pe
+
+Bonjour, <%= @user.name %>
+
+Votre commande n°<%= @order.id %> à été emballer avec le plus grand soin et envoyé par la poste !
+
+Vous la recevrez d'ici quelques jours, vous pouvez suivre son déplacement avec le numéro de suivis suivant : <%= @order.tracking_number %>
+Encore merci ! Bonne journée à vous
