refacto item categories in admin and item controller and add migration to fix default value of item

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -35,6 +35,9 @@ and renders all form fields for a resource's editable attributes.
 
   <% page.attributes.each do |attribute| -%>
     <div class="field-unit field-unit--<%= attribute.html_class %> field-unit--<%= requireness(attribute) %>">
+      <% if attribute.name == "category" %>
+        <%= @categories.join(' ') %>
+      <% end %>
       <%= render_field attribute, f: f %>
 
     </div>
