gpdr popup disabled for now, osano is coming

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
       <%= render "shared/navbar" unless @disable_nav %>
     <% end %>
 
-    <%= render "shared/gdpr_popup" %>
+    <%#= render "shared/gdpr_popup" %>
 
     <%= yield %>
 
