first look delivery terms

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -80,7 +80,7 @@
           <ul class="mt-4 space-y-4">
             <li>
               <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                RGPD
+                Respect de la vie privée
               </a>
             </li>
 
