added osano to listen to over script to deal with cookie consent

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
     <title>Mabciaceramic</title>
     <meta charset="utf-8">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="https://cmp.osano.com/169ldSSR9wHkkoZj/4484c914-cafd-47a7-8632-4eaf1832bcfc/osano.js"></script>
+
+    <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-32N0L2H7X5"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -14,7 +16,7 @@
       gtag('config', 'G-32N0L2H7X5');
     </script>
 
-    <!-- Hotjar Tracking Code for https://www.mabciaceramic.com -->
+    <!-- Hotjar Tracking -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
