--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -174,7 +174,7 @@
         <div data-item-descriptions-target="deliveryToggleable" class="hidden px-4 pt-4 flex flex-col">
           <div class="flex flex-col space-y-2">
             <span class="font-semibold text-gray-700">Date d'arrivée estimée </span>
-            <span class="text-xl text-gray-700"> <%= l(Date.today.next_day(7), format: "%A, %d, %B") %> </span>
+            <span class="text-xl text-gray-700"> <%= estimated_delivery_date %> </span>
           </div>
 
           <div class="pt-4">
