add flash msg and delete gpdr popup made by hand

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,12 +39,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
 
-  <body data-controller="gdpr-popup">
+  <body>
 
 
     <%= render "shared/navbar" unless @disable_nav %>
 
-    <%#= render "shared/gdpr_popup" %>
+
+    <%= render "shared/flashes" %>
 
     <%= yield %>
 
