--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
     <%= render "shared/navbar" unless @disable_nav %>
 
 
-    <%= render "shared/flashes" %>
+    <%#= render "shared/flashes" %>
 
     <%= yield %>
 
