--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -42,14 +42,14 @@
                       label: "Prénom",
                       placeholder: 'Prénom*',
                       label_html: { class:"text-sm text-gray-600 tracking-tight"},
-                      input_html: { class: " text-sm text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                      input_html: { class: " text-sm text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
         <%= f.input :last_name,
                       required: false,
                       label: "Nom",
                       label_html: { class:"text-sm text-gray-600 tracking-tight"},
                       placeholder: 'Nom*',
-                      input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+                      input_html: { class: "text-sm px-2 py-2 border-2 border-gray-200 w-full rounded-lg"} %>
 
         <%= f.input :password,
                     hint: "laisser vide si vous ne voulez pas le changer",
@@ -57,13 +57,13 @@
                     label: "Mot de passe",
                     label_html: { class:"text-sm text-gray-600 tracking-tight"},
                     required: false,
-                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+                    input_html: { class: "px-2 py-2 border-2 border-gray-200 w-full rounded-lg" } %>
 
         <%= f.input :password_confirmation,
                     required: false,
                     label: "Mot de passe confirmation",
                     label_html: { class:"text-sm text-gray-600 tracking-tight"},
-                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+                    input_html: { class: "px-2 py-2 border-2 border-gray-200 w-full rounded-lg" } %>
 
         <%= f.input :current_password,
                     hint: "Nous avons besoin de votre mot de passe actuel pour confirmer le changement",
@@ -71,11 +71,11 @@
                     label: "Mot de passe actuel",
                     label_html: { class:"text-sm text-gray-600 tracking-tight"},
                     required: true,
-                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+                    input_html: { class: "px-2 py-2 border-2 border-gray-200 w-full rounded-lg" } %>
       </div>
 
       <div class="pt-4">
-        <%= f.button :submit, "Mettre à jour", class:"w-full py-4 rounded-xl bg-black text-white font-medium text-lg" %>
+        <%= f.button :submit, "Mettre à jour", class:"w-full py-4 rounded-xl bg-gray-900 text-white font-medium text-lg" %>
       </div>
     <% end %>
 
