--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -91,7 +91,7 @@
             </li>
 
             <li>
-              <a href="#" class="text-base text-gray-500 hover:text-gray-900" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</a>
+              <button class="text-base text-gray-500 hover:text-gray-900" onclick="Osano.cm.showDrawer('osano-cm-dom-info-dialog-open')">Préférence de cookie</button>
             </li>
           </ul>
         </div>
